[package]
name = "rouge"
version = "0.1.2"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
tcod = { version = "0.12", features = ["serialization"] }
rand = "0.3"
# rand = "0.6.5" TODO: Update
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
whoami = "0.5.2"
structopt = "*"
dirs = "*"
rodio = "*"
